--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,13 @@
   .carousel { width:640px; height:360px;}
 
   #background{
-    background-image: url('../img/DivHacks_Background3.png');
+    background-image: url('../img/divhacks_background.png');
     background-size: 100% 100%;
     background-position: center;
     background-size: cover;
     padding-bottom:20em;
+    width:auto;
+	  height: 100vh;
    }
 
    :root {
@@ -162,11 +164,12 @@
     background: transparent;
     border: 2px solid var(--dark-color);
     border-radius: var(--border-radius-large);
-    padding: 12px 26px 14px 26px;
+    padding: 12px 40px 14px 40px;
     color: var(--dark-color);
     font-family: var(--base-font-family);
     font-size: var(--p-font-size);
     white-space: nowrap;
+
   }
 
   .custom-btn.btn-bg {
