--- a/css/style.css
+++ b/css/style.css
@@ -679,9 +679,10 @@
   .background-photo{
     width:auto;
 	  height: 70vh;
-	  background-size: cover;
-    background-position: 50% 50%;
+	  background-size: 100% 100%;
+    background-position: center;
 	  background-attachment: fixed;
+    background-size: cover;
   }
 
   /*---------------------------------------
