--- a/css/style.css
+++ b/css/style.css
@@ -21,47 +21,45 @@
       font-weight: bold;
       font-style: normal;
   } */
+  .carousel {
+    width: 640px;
+    height: 360px;
+  }
 
-  .carousel { width:640px; height:360px;}
-
-  #background{
+  #background {
     background-image: url('../img/divhacks_background.png');
     background-size: 100% 100%;
     background-position: center;
     background-size: cover;
-    padding-bottom:20em;
-    width:auto;
-	  height: 100vh;
-   }
+    padding-bottom: 20em;
+    width: auto;
+    height: 100vh;
+  }
 
-   :root {
-    --primary-color:        #DDC4DD;
+  :root {
+    --primary-color: #DDC4DD;
     /* --secondary-color:      #A5DAA9; */
-    --secondary-color:      #4F517D;
-    --white-color:          #eee7ff;
-    --dark-color:           #1A3A3A;
-    --project-bg:           #ffffff;
-    --menu-bg:              transparent;
-
-    --title-color:          #1A3A3A;
-    --gray-color:           white;
+    --secondary-color: #4F517D;
+    --white-color: #eee7ff;
+    --dark-color: #1A3A3A;
+    --project-bg: #ffffff;
+    --menu-bg: transparent;
+    --title-color: #1A3A3A;
+    --gray-color: white;
     /* --link-color:           #404040; */
-    --link-color:           #4F517D;
-    --p-color:              black;
-
-    --base-font-family:     'Exo', sans-serif;
-    --title-font-family:    'Exo', sans-serif;
-    --font-bold-family:     'Exo', sans-serif;
-
-    --h1-font-size:         42px;
-    --h2-font-size:         32px;
-    --h3-font-size:         24px;
-    --p-font-size:          16px;
-    --base-font-size:       16px;
-    --menu-font-size:       16px;
-
-    --border-radius-large:  100px;
-    --border-radius-small:  5px;
+    --link-color: #4F517D;
+    --p-color: black;
+    --base-font-family: 'Exo', sans-serif;
+    --title-font-family: 'Exo', sans-serif;
+    --font-bold-family: 'Exo', sans-serif;
+    --h1-font-size: 42px;
+    --h2-font-size: 32px;
+    --h3-font-size: 24px;
+    --p-font-size: 16px;
+    --base-font-size: 16px;
+    --menu-font-size: 16px;
+    --border-radius-large: 100px;
+    --border-radius-small: 5px;
   }
 
   body {
@@ -69,12 +67,10 @@
     font-family: var(--base-font-family);
   }
 
-
   /*---------------------------------------
      TYPOGRAPHY
   -----------------------------------------*/
-
-  h1,h2,h3,h4,h5,h6 {
+  h1, h2, h3, h4, h5, h6 {
     font-family: var(--title-font-family);
     line-height: inherit;
   }
@@ -120,16 +116,18 @@
   }
 
   .grayscale {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(100%);
+    /* Chrome 19+ & Safari 6+ */
   }
 
   .grayscale:hover {
     filter: none;
     -webkit-filter: grayscale(0%);
   }
-
 
   /*  BLOCKQUOTES */
   .quote {
@@ -151,13 +149,12 @@
   }
 
   blockquote {
-    border-left: 5px solid rgba(0,0,0,0.05);
+    border-left: 5px solid rgba(0, 0, 0, 0.05);
     display: block;
     margin: 42px 0;
     padding: 14px 22px;
-    color: rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
   }
-
 
   /* BUTTON */
   .custom-btn {
@@ -169,14 +166,13 @@
     font-family: var(--base-font-family);
     font-size: var(--p-font-size);
     white-space: nowrap;
-
   }
 
   .custom-btn.btn-bg {
     background: var(--secondary-color);
     color: var(--white-color);
     border-color: transparent;
-	transition: all .3s ease;
+    transition: all .3s ease;
   }
 
   .custom-btn:hover,
@@ -186,11 +182,9 @@
     border-color: transparent;
   }
 
-
   /*---------------------------------------
      GENERAL
   -----------------------------------------*/
-
   * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -226,6 +220,7 @@
   .section-padding {
     padding: 4em 0;
   }
+
   .section-padding-half {
     padding: 4em 0;
   }
@@ -235,12 +230,9 @@
     width: 100%;
   }
 
-
-
   /*---------------------------------------
     MENU
   -----------------------------------------*/
-
   .navbar {
     background: var(--menu-bg);
     z-index: 2;
@@ -356,12 +348,9 @@
     top: 8px;
   }
 
-
-
   /*---------------------------------------
      HERO
   -----------------------------------------*/
-
   .hero {
     position: relative;
     padding-bottom: 10vh;
@@ -378,12 +367,9 @@
     top: 2em;
   }
 
-
-
   /*---------------------------------------
      PROJECT
   -----------------------------------------*/
-
   .project {
     background: var(--project-bg);
   }
@@ -445,7 +431,7 @@
     background: var(--gray-color);
     width: 50px;
     height: 3px;
-    margin:  35px 5px;
+    margin: 35px 5px;
   }
 
   .owl-theme .owl-dots .owl-dot.active span,
@@ -486,12 +472,9 @@
     margin-right: 1em;
   }
 
-
-
   /*---------------------------------------
       ABOUT
   -----------------------------------------*/
-
   .about {
     position: relative;
     overflow: hidden;
@@ -517,14 +500,13 @@
     margin-bottom: 15vh;
   }
 
-  #tracks{
+  #tracks {
     margin-bottom: 5em;
   }
 
   /*---------------------------------------
       BLOG
   -----------------------------------------*/
-
   .blog-header {
     border-radius: var(--border-radius-small);
     position: relative;
@@ -537,7 +519,7 @@
   }
 
   .blog-header-info {
-    background: linear-gradient(transparent,rgba(0,0,0,0.95));
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.95));
     position: absolute;
     right: 0;
     left: 0;
@@ -567,12 +549,67 @@
     font-size: 18px;
   }
 
+  /*---------------------------------------
+     TRACK
+  -----------------------------------------*/
+  .flip-card {
+    background-color: transparent;
+    width: 35vh;
+    height: 50vh;
+    perspective: 200vh;
+  }
 
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 1vh 2vh 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .flip-card-front {
+    background-color: var(--primary-color);
+    color: black;
+    text-align: center;
+  }
+
+  .flip-card-back {
+    background-color: var(--primary-color);
+    color: black;
+    padding: 1vh;
+    transform: rotateY(180deg);
+  }
+
+  .flex-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .flex-container>div {
+    background-color: transparent;
+    width: 45vh;
+    height: 52vh;
+    perspective: 200vh;
+    padding: 3vh;
+  }
 
   /*---------------------------------------
      CONTACT
   -----------------------------------------*/
-
   .newsletter-form .form-control,
   .contact-form .form-control {
     box-shadow: none;
@@ -597,12 +634,9 @@
     background: var(--secondary-color);
   }
 
-
-
   /*---------------------------------------
      FOOTER
   -----------------------------------------*/
-
   .site-footer {
     background: var(--secondary-color);
     padding: 3vh 0 0 0;
@@ -637,7 +671,6 @@
   /*---------------------------------------
      SOCIAL ICON
   -----------------------------------------*/
-
   .social-icon {
     position: relative;
     padding: 0;
@@ -658,47 +691,43 @@
   }
 
   .fa {
-   padding: 20px;
-  font-size: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
 
   /*---------------------------------------
       BACKGROUND IMAGES
   ---------------------------------------*/
-
-  #image-1{
+  #image-1 {
     background-image: url('../img/divider_background.jpg');
   }
 
-  #image-2{
+  #image-2 {
     background-image: url('../img/divider_background_2.jpg');
   }
 
-  .background-photo{
-    width:auto;
-	  height: 70vh;
-	  background-size: 100% 100%;
+  .background-photo {
+    width: auto;
+    height: 70vh;
+    background-size: 100% 100%;
     background-position: center;
-	  background-attachment: fixed;
+    background-attachment: fixed;
     background-size: cover;
   }
 
   /*---------------------------------------
      RESPONSIVE STYLES
   -----------------------------------------*/
-
   @media screen and (min-width: 1200px) {
-
     .about-info h2 {
       max-width: 70%;
     }
   }
 
   @media screen and (min-width: 991px) {
-
     .project h2 {
       max-width: 32%;
       margin: 0 auto;
@@ -706,7 +735,6 @@
   }
 
   @media screen and (max-width: 991px) {
-
     .hero {
       padding-top: 3em;
     }
@@ -727,7 +755,6 @@
     /* .navbar-brand {
       display: none;
     } */
-
     .hide-mobile {
       display: none
     }
@@ -750,7 +777,6 @@
   }
 
   @media screen and (max-width: 767px) {
-
     h1 {
       font-size: 36px;
     }
