--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@
   -----------------------------------------*/
   .flip-card {
     background-color: transparent;
-    width: 35vh;
+    width: 100%;
     height: 50vh;
     perspective: 200vh;
     margin: 3vh
